<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pnsat.open_air.MainActivity"
    android:id="@+id/lytpage"
    android:background="@drawable/bg1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt1"
        android:id="@+id/txt1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textColor="@color/c1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:id="@+id/btn1"
        android:layout_below="@+id/txt1"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textColor="@color/c2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:id="@+id/btn2"
        android:layout_below="@+id/btn1"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textColor="@color/c3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:id="@+id/btn3"
        android:layout_below="@+id/btn2"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textColor="@color/c2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="PROGRAM BY YONGYUT SANGHIRUN"
        android:id="@+id/bottomtext"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt2"
        android:id="@+id/txt2"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn4"
        android:textSize="@dimen/h1"
        android:textColor="@color/c1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        android:id="@+id/btn5"
        android:layout_above="@+id/bottomtext"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textColor="@color/c3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:id="@+id/btn4"
        android:layout_above="@+id/btn5"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/h1"
        android:textColor="@color/c2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btncom"
        android:id="@+id/btncom"
        android:textSize="@dimen/h1"
        android:textColor="#d110f3"
        android:layout_below="@+id/btn3"
        android:layout_alignRight="@+id/txt2"
        android:layout_alignEnd="@+id/txt2" />

</RelativeLayout>
